--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/png">
     <title>Научиться учиться</title>
 </head>
 <body>
     <div class="page">
         <header class="header">
-          <div class="logo logo_place_header">
-            <img class="logo" src="./images/logo.svg" alt="Логотип Яндекс.Практикум">
-          </div>
+          <img class="logo logo_place_header" src="./images/logo.svg" alt="Логотип Яндекс.Практикум">
           <h1 class="header__title">Научиться учиться</h1>
           <h2 class="header__subtitle">
             Какие современные и эффективные подходы
             к обучению вы можете использовать в своей жизни?
-            <!-- Доделать ссылку -->
             <a href="#" class="header__link">Узнать &#8594;</a>
           </h2>
           <div class="header__main-illustration">
@@ -52,43 +50,43 @@
 
             <section class="digits">
               <h1 class="section-title">Цифры и факты</h1>
-              <h2 class="section-subtitle">Про учёбу и мозг</h2>
+              <p class="section-subtitle">Про учёбу и мозг</p>
               <table class="table">
                 <tr class="table__row">
                   <td class="table__cell">
-                    <h3 class="table__heading">86 миллиардов</h3>
+                    <p class="table__heading">86 миллиардов</p>
                     <p class="table__text">Число нейронов в мозге человека</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">2,1 миллиарда</h3>
+                    <p class="table__heading">2,1 миллиарда</p>
                     <p class="table__text">Число нуждающихся в повышении квалификации</p>
                     <p class="table__text">Всемирный Банк, 2017</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">1000 терабайт</h3>
+                    <p class="table__heading">1000 терабайт</p>
                     <p class="table__text">Объём памяти человека</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">500 триллионов</h3>
+                    <p class="table__heading">500 триллионов</p>
                     <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
                   </td>
                 </tr>
                 <tr class="table__row">
                   <td class="table__cell">
-                    <h3 class="table__heading">420 миллионов</h3>
+                    <p class="table__heading">420 миллионов</p>
                     <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                     <p class="table__text">Всемирный Банк, 2017</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">17-20 лет</h3>
+                    <p class="table__heading">17-20 лет</p>
                     <p class="table__text">Пик обучаемости</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">1885 год</h3>
+                    <p class="table__heading">1885 год</p>
                     <p class="table__text">Открытие кривой забывания</p>
                   </td>
                   <td class="table__cell">
-                    <h3 class="table__heading">1889 год</h3>
+                    <p class="table__heading">1889 год</p>
                     <p class="table__text">Открытие условного рефлекса</p>
                   </td>
                 </tr>
@@ -96,14 +94,99 @@
             </section>
 
             <section class="feinman">
+              <h1 class="feinman__title">Метод Фейнмана</h1>
+              <p class="feinman__subtitle">Выучить и не забыть.</p>
+              <a href="#" class="feinman__link">Подробнее &#8594;</a>
+              <div class="feinman__illustration">
+                <img class="feinman__illustration" src="./images/feinman.png" alt="Фотография Фейнмана">
+              </div>
             </section>
 
             <section class="kaufman">
+              <h1 class="section-title_theme_dark">Принципы обучения</h1>
+              <h2 class="section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+              <table class="table_theme_dark">
+                <tr class="table__row_theme_dark">
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">1</p>
+                    <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">2</p>
+                    <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">3</p>
+                    <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">4</p>
+                    <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">5</p>
+                    <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+                  </td>
+                </tr>
+                <tr class="table__row_theme_dark">
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">6</p>
+                    <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">7</p>
+                    <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">8</p>
+                    <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">9</p>
+                    <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+                  </td>
+                  <td class="table__cell_theme_dark">
+                    <p class="table__heading_theme_dark">10</p>
+                    <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+                  </td>
+                </tr>
+              </table>
+              <img class="kaufman__triangle" src="./images/triangle.svg" alt="Картинка треугольник">
             </section>
         </main>
         <footer class="footer">
-          <div class="logo logo_place_footer">
-            <img class="logo" src="./images/logo.svg" alt="Логотип Яндекс.Практикум">
+          <div class="footer__columns">
+            <div class="footer__column_content_copyright">
+              <img class="logo logo_place_footer" src="./images/logo_white.svg" alt="Логотип Яндекс.Практикум">
+              <div class="footer__author">
+                <p class="footer__author-text">&copy 2020. Станислав Михайлов</p>
+              </div>
+            </div>
+            <div class="footer__column_content_info">
+              <h1 class="footer__column-heading">О Практикуме</h1>
+              <div class="footer__column-links">
+                <a href="https://praktikum.yandex.ru/" target="_blank" class="footer__column-link">Главная</a>
+                <a href="https://praktikum.yandex.ru/web" target="_blank" class="footer__column-link">Концепция</a>
+                <a href="https://praktikum.yandex.ru/promo/mentors-school" target="_blank" class="footer__column-link">Наставники</a>
+              </div>
+            </div>
+            <div class="footer__column_content_social">
+              <h1 class="footer__column-heading">Соцсети</h1>
+              <div class="footer__column-links">
+                <a href="https://www.facebook.com/yandex.praktikum/" target="_blank" class="footer__column-link">
+                  <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Facebook">
+                  Facebook
+                </a>
+                <a href="https://vk.com/yandex.praktikum" target="_blank" class="footer__column-link">
+                  <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Вконтакте">
+                  Вконтакте
+                </a>
+                <a href="https://www.instagram.com/yndx.praktikum/" target="_blank" class="footer__column-link">
+                  <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Instagram">
+                  Instagram
+                </a>
+              </div>
+            </div>
           </div>
         </footer>
     </div>
