--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main class="content">
             <section class="description">
               <div class="two-columns">
-                <h1 class="two-columns__brief">Главные проблемы в обучении</h1>
+                <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
                 <ul class="two-columns__main-text list">
                   <li class="two-columns__paragraph">
                     Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -49,7 +49,7 @@
             </section>
 
             <section class="digits">
-              <h1 class="section-title">Цифры и факты</h1>
+              <h3 class="section-title">Цифры и факты</h3>
               <p class="section-subtitle">Про учёбу и мозг</p>
               <table class="table">
                 <tr class="table__row">
@@ -94,7 +94,7 @@
             </section>
 
             <section class="feinman">
-              <h1 class="feinman__title">Метод Фейнмана</h1>
+              <h3 class="feinman__title">Метод Фейнмана</h3>
               <p class="feinman__subtitle">Выучить и не забыть.</p>
               <a href="#" class="feinman__link">Подробнее &#8594;</a>
               <div class="feinman__illustration">
@@ -103,8 +103,8 @@
             </section>
 
             <section class="kaufman">
-              <h1 class="section-title_theme_dark">Принципы обучения</h1>
-              <h2 class="section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+              <h3 class="section-title_theme_dark">Принципы обучения</h3>
+              <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
               <table class="table_theme_dark">
                 <tr class="table__row_theme_dark">
                   <td class="table__cell_theme_dark">
@@ -159,7 +159,7 @@
             <div class="footer__column_content_copyright">
               <img class="logo logo_place_footer" src="./images/logo_white.svg" alt="Логотип Яндекс.Практикум">
               <div class="footer__author">
-                <p class="footer__author-text">&copy 2020. Станислав Михайлов</p>
+                <p class="footer__author-text">&copy; 2020. Станислав Михайлов</p>
               </div>
             </div>
             <div class="footer__column_content_info">
