--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </li>
               </ul>
             </nav>
-            <div class="footer__column footer__column_content_social">
+            <nav class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
               <ul class="footer__column-links list">
                 <li>
@@ -192,7 +192,7 @@
                   </a>
                 </li>
               </ul>
-            </div>
+            </nav>
           </div>
         </footer>
     </div>
