--- a/index.html
+++ b/index.html
@@ -175,20 +175,17 @@
               <ul class="footer__column-links list">
                 <li>
                   <a href="https://www.facebook.com/yandex.praktikum/" target="_blank" class="footer__column-link">
-                    <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Фейсбук">
-                    Facebook
+                    <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Фейсбук">Facebook
                   </a>
                 </li>
                 <li>
                   <a href="https://vk.com/yandex.praktikum" target="_blank" class="footer__column-link">
-                    <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Вконтакте">
-                    Вконтакте
+                    <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Вконтакте">Вконтакте
                   </a>
                 </li>
                 <li>
                   <a href="https://www.instagram.com/yndx.praktikum/" target="_blank" class="footer__column-link">
-                    <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Инстаграм">
-                    Instagram
+                    <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Инстаграм">Instagram
                   </a>
                 </li>
               </ul>
