--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="page">
         <header class="header">
-          <img class="logo logo_place_header" src="./images/logo.svg" alt="Логотип Яндекс.Практикум">
+          <a href="https://praktikum.yandex.ru/" target="_blank" class="logo logo_place_header">
+            <img class="logo" src="./images/logo.svg" alt="Логотип Яндекс.Практикум">
+          </a>
           <h1 class="header__title">Научиться учиться</h1>
           <p class="header__subtitle">
             Какие современные и эффективные подходы
@@ -153,7 +155,9 @@
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
-              <img class="logo logo_place_footer" src="./images/logo_white.svg" alt="Логотип Яндекс.Практикум">
+              <a href="https://praktikum.yandex.ru/" target="_blank" class="logo logo_place_footer">
+                <img class="logo" src="./images/logo_white.svg" alt="Логотип Яндекс.Практикум">
+              </a>
               <p class="footer__author">&copy; 2020. Станислав Михайлов</p>
             </div>
             <nav class="footer__column footer__column_content_info">
