--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
   <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/png">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
-        <a href="#content" class="header__link">Узнать &#8594;</a>
+        <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
-      <img class="header__main-illustration" src="images/two_again.png" alt="Картинка «Снова двойка»">
+      <img class="header__main-illustration" src="images/two_again.png" alt="Картина «Опять двойка»">
       <div class="header__square-pic"></div>
     </header>
 
-    <main id="content" class="content">
+    <main class="content">
 
       <section class="description">
         <div class="two-columns">
@@ -91,26 +91,22 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
-            frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
       <section class="oakley">
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">
-              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
-              причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
-              да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
-              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
-              ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
-            </p>
-          </div>
+          <p class="two-columns__paragraph">
+            С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+            причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
+            да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+            И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
+            ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </p>
         </div>
       </section>
 
