добавил блок rotation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
       <img class="header__main-illustration" src="images/two_again.png" alt="Картина «Опять двойка»">
-      <div class="header__square-pic"></div>
+      <div class="rotation header__square-pic"></div>
     </header>
 
     <main class="content">
@@ -232,7 +232,7 @@
             </td>
           </tr>
         </table>
-        <div class="kaufman__triangle"></div>
+        <div class="rotation kaufman__triangle"></div>
       </section>
 
       <section class="resources">
