--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <section class="oakley">
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-          <p class="two-columns__paragraph">
+          <p class="two-columns__paragraph two-columns__paragraph_place_oakley">
             С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
             причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
             да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
