--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <html lang="ru">
 
 <head>
@@ -19,13 +20,13 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594;</a>
+        <button type="button" class="header__link">Узнать &#8594;</button>
       </p>
       <img class="header__main-illustration" src="images/two_again.png" alt="Картина «Опять двойка»">
       <div class="rotation header__square-pic"></div>
     </header>
 
-    <main class="content">
+    <main id="content" class="content">
 
       <section class="description">
         <div class="two-columns">
@@ -302,6 +303,7 @@
     </footer>
 
   </div>
+  <script src="./index.js"></script>
 
 </body>
 
